# peopleflow-rag-assistant

./: .env.example  README.md  Tavily Crawl Demo Tutorial.ipynb  ingestion.py  logger.py  main.py  pyproject.toml
backend/: core.py  core2.py
backend/config/: settings.py
backend/generation/: answer_generator.py  llm_factory.py  prompt_builder.py
backend/ingestion/: metadata_enricher.py  pdf_loader.py  text_splitter.py  web_loader.py  web_metadata_enricher.py
backend/retrieval/: hybrid_retriever.py  internal_retriever.py  web_retriever.py  web_sources.py
backend/schemas/: rag_schema.py
backend/vectorestore/: pinecone_store.py
backend/vectorstore/: pinecone_store.py
chorama_db/: chroma.sqlite3
scripts/: ingest_pdf.py  test_internal_retrieval.py  test_web_retriever.py  web_ingestion_pipeline.py
